--- a/android-app/src/main/res/values/styles.xml
+++ b/android-app/src/main/res/values/styles.xml
@@ -1,3 +1,3 @@
 <resources>
-    <style name="AppTheme" parent="android:Theme.Material.NoActionBar"/>
+    <style name="AppTheme" parent="@style/Theme.Material3.DynamicColors.DayNight.NoActionBar"/>
 </resources>
